CR-2009-04-24-2: Bugfix:     rework of auto install test procedures
                 Review:     AA

CR-2009-04-24-1: Enhancem.:  o new command line option: no_local_qmaster_spool
                                If used the qmaster is using 
                                "$SGE_ROOT/$SGE_CELL/spool/qmaster" directory for
                                spooling.
                 Review:     JG

JG-2009-04-24-0: Enhancem.:  extended functional/tight_integration test to cover
                             IZ 2986: Test various scenarios of tightly
                             integrated parallel jobs submitted with the -notify
                             switch.
                 Review:     HP

RD-2009-04-24-0: Bugfix:     fixed reporting test broken due to
                             RD-2009-04-23-0
                 Review:     CR

CR-2009-04-24-0: Enhancem:   o set_config_and_propagate():
                                timeout for execds to get new configuration
                                now depends on active load report interval
                             o config_shadowd_hosts():
                                check that shadowds have access to qmaster
                                spool dir at testsuite startup
                 Bugfix:     o some tests did not reset changed configuration
                               attributes
                 Review:     DG  

MD-2009-04-24-0: Enhancem:   added test for IZ 2972 to clients/qalter test
                 Review:     CR

RH-2009-04-24-0: Bugfix:     Hedeby: 
                             o add_ge_service does not destroy the default
                               execd config for cloud resources
                             o manage_admin_user test disabled (need rewrite)
                             o It is now possible to define a gridengine qmaster
                               host as hedeby master host (needed for cloud testing)  
                 Review:    TB 
