@@ -1,3 +1,6 @@
+EB-2009-04-27-0: Enhancemn.: eleminated unecessary data in performance test
+                 Review:     RD
+
 CR-2009-04-24-2: Bugfix:     rework of auto install test procedures
                  Review:     AA
 
